Ajout autocomplete search

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,9 @@
         </div>
     </div>
 </div>
+
+<app-search-box class="search"></app-search-box>
+
 <div class="charts">
     <div echarts [options]="options" class="demo-chart"></div>
 </div>
