--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,8 +40,21 @@ ng-lottie{
   padding-bottom: 10px;
 }   
 
+.search{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #CBB9A8;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.search h1{
+  font-size: 2.5em;
+}
+
 .charts{
-  margin-top: 30px;
+  background-color: #EEE5E9;
 }
 
 //L'ensemble des cards
